--- a/src/App.css
+++ b/src/App.css
@@ -7,84 +7,13 @@ a{
     color: #000000;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 50px;
-    align-items: center;
-    max-width: 1000px;
-    margin: auto;
-    border-bottom: 1px solid #d7d7d7;
-    font-size: 18px;
-    padding: 0px 10px;
-}
-
-img{
-    max-width:auto;
-}
-
-.box{
-    max-width: 200px;
-    margin: auto;
-    border-radius: 5px;
-    box-shadow:rgba(red, green, blue, alpha);
-    padding: 10px;
-}
-
-p{
-    font-size: 18px;
-    text-align: center;
-}
-
-button{
-    padding: 10px;
-    margin: 10px;
-    font-size: 18px;
-    color: white; 
-}
-
-button.add{
-    background-color: skyblue;
-}
-
-button.sub{
-    background-color: red;
-}
-
-.box{
-    width: 400px;
-    margin: 20px auto;
-    box-shadow: rgba(0,0,0,0.16) 0px 1px 4px;
-    padding: 20px 5px;
-    border: 0px;
-    border-radius: 5px;
-}
-
-.box-success{
-    background-color: #baffbf;
-}
-
-.box.alert{
-    background-color: #ffb4b4;
-}
-
-.box.warning{
-    background-color: #FFDEB4;
-}
-
-.box p {
-    margin: 10px;
-}
-
-.box p.title{
-    font-size: 20px;
-}
-
-.box p.description{
-    font-size: 14px;
-}
-
 .hidden{
     display: none;
+}
+
+main {
+    min-height: 90vh;
+    max-width: 1200px;
+    margin: auto;
+    padding: 10px;
 }
