--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+
+:root{
+    --theme-border: #d7d7d7;
+    --theme-button: #0F3460;
+}
+
 *{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
-    padding: 0px;
+ margin: 0px;
+ padding: 0px;
+ box-sizing: border-box;
+ font-family: 'Poppins', sans-serif;
 }
